--- a/FinSTLK.conf
+++ b/FinSTLK.conf
@@ -9,8 +9,9 @@ GlobalOptionFilter=OSISHeadings
 GlobalOptionFilter=OSISFootnotes
 MinimumVersion=1.6.1
 Versification=German
-Version=1.0
+Version=1.1
 History_1.0=Initial version
+History_1.1=Moved book introduction to beginning of first verse of each book
 InstallSize=2357993
 Encoding=UTF-8
 TextSource=Suomen Tunnustuksellinen Luterilainen Kirkko
