Increment versions again

--- a/FinSTLK.conf
+++ b/FinSTLK.conf
@@ -9,10 +9,10 @@ GlobalOptionFilter=OSISHeadings
 GlobalOptionFilter=OSISFootnotes
 MinimumVersion=1.6.1
 Versification=German
-Version=1.1
+Version=1.2
 History_1.0=Initial version
 History_1.1=Moved book introduction to beginning of first verse of each book
-InstallSize=2357993
+History_1.2=Fix short book (that have only 1 chapter) div & chapter tags
 Encoding=UTF-8
 TextSource=Suomen Tunnustuksellinen Luterilainen Kirkko
 Description=Finnish Pyhä Raamattu (STLK 2017)
